--- a/mystyle.css
+++ b/mystyle.css
@@ -112,8 +112,7 @@ i{
     padding: 0 5px;
 }
 .row{
-    margin-top: 50px;
-    margin-bottom: 100px;
+    padding: 50px 0;
 }
 .server-image{
     display: inline-block;
@@ -148,5 +147,31 @@ i{
     display: inline-block;
 }
 .row.two{
-    margin-left: 250px;
+    padding-left: 250px;
+    background-color: #f6f6f6;
+    padding-bottom: 100px;
 }
+.row.four{
+    text-align: center;
+    background-color: #f6f6f6;
+}
+.server-title-four{
+    width: 800px;
+    margin: auto;
+}
+#stars{
+    background-image: url(img/stars.svg);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: inherit;
+    line-height: 50px;
+}
+.download.footer{
+    background-color: #8ea1e1;
+    color: white;
+}
+.download.footer:hover{
+    background-color: rgba(142,161,225, .8);
+    cursor: pointer;
+}
+
